[package]
name = "percentage-rs"
version = "0.1.5"
authors = ["nemui_sen <40149702+NemuiSen@users.noreply.github.com>"]
edition = "2018"
description = "Get the percentage of any number"
license = "MIT"
keywords = ["percent", "percentage"]
repository = "https://github.com/NemuiSen/percentage-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.14"